[gd_scene load_steps=2 format=3 uid="uid://dxa870cad1b8c"]

[ext_resource type="Script" path="res://Source/ap_label.gd" id="1_pci8p"]

[node name="APLabel" type="Label3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
modulate = Color(0, 0.815686, 1, 1)
text = "0131232131"
font_size = 60
outline_size = 20
script = ExtResource("1_pci8p")

[node name="FadeTimer" type="Timer" parent="."]
one_shot = true

[node name="FreeTimer" type="Timer" parent="."]

[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]
